Изменён цвет иконок с статье и списке статей

--- a/src/article.html
+++ b/src/article.html
@@ -613,13 +613,13 @@
                             <h2>Продаётся щенок породы Сибирский хаски, мальчик, дата рождения 2018-08-01 </h2>
                             <div class="top_metainfo">
                                 <div class="category">
-                                    <i class="fa fa-paw" aria-hidden="true"></i>
-                                    <span>Категория:</span>
+                                    <i class="fa fa-hashtag" aria-hidden="true"></i>
+<!--                                    <span>Категория:</span>-->
                                     <a href="#">Продажа щенков</a>
                                 </div><!-- end /.category-->
                                 <div class="autor">
                                     <i class="fa fa-user" aria-hidden="true"></i>
-                                    <span>Разместил:</span>
+<!--                                    <span>Разместил:</span>-->
                                     <a href="#">Nikita Kozlov</a>
                                 </div><!-- end /.autor-->
                             </div><!-- end /.top_metainfo-->
@@ -674,27 +674,27 @@
                                     <span>Метки:</span>
                                     <ul>
                                         <li>
-                                            <i class="fa fa-thumb-tack" aria-hidden="true"></i>
+                                            <i class="fa fa-tag" aria-hidden="true"></i>
                                             <a href="#">Чемпиор России</a>
                                         </li>
                                         <li>
-                                            <i class="fa fa-thumb-tack" aria-hidden="true"></i>
+                                            <i class="fa fa-tag" aria-hidden="true"></i>
                                             <a href="#">Юный чемпион Беларуси</a>
                                         </li>
                                         <li>
-                                            <i class="fa fa-thumb-tack" aria-hidden="true"></i>
+                                            <i class="fa fa-tag" aria-hidden="true"></i>
                                             <a href="#">Чистокровный</a>
                                         </li>
                                         <li>
-                                            <i class="fa fa-thumb-tack" aria-hidden="true"></i>
+                                            <i class="fa fa-tag" aria-hidden="true"></i>
                                             <a href="#">Арион Лотас</a>
                                         </li>
                                         <li>
-                                            <i class="fa fa-thumb-tack" aria-hidden="true"></i>
+                                            <i class="fa fa-tag" aria-hidden="true"></i>
                                             <a href="#">Европейский питомник</a>
                                         </li>
                                         <li>
-                                            <i class="fa fa-thumb-tack" aria-hidden="true"></i>
+                                            <i class="fa fa-tag" aria-hidden="true"></i>
                                             <a href="#">Европейский питомник</a>
                                         </li>
                                     </ul>
