--- a/src/articles.html
+++ b/src/articles.html
@@ -614,13 +614,13 @@
                                 <h2>Продаётся щенок породы Сибирский хаски, мальчик, дата рождения 2018-08-01 </h2>
                                 <div class="top_metainfo">
                                     <div class="category">
-                                        <i class="fa fa-paw" aria-hidden="true"></i>
-                                        <span>Категория:</span>
+                                        <i class="fa fa-hashtag" aria-hidden="true"></i>
+<!--                                        <span>Категория:</span>-->
                                         <a href="#">Продажа щенков</a>
                                     </div><!-- end /.category-->
                                     <div class="autor">
                                         <i class="fa fa-user" aria-hidden="true"></i>
-                                        <span>Разместил:</span>
+<!--                                        <span>Разместил:</span>-->
                                         <a href="#">Nikita Kozlov</a>
                                     </div><!-- end /.autor-->
                                 </div><!-- end /.top_metainfo-->
@@ -734,13 +734,13 @@
                                 <h2>Продаётся щенок породы Сибирский хаски, мальчик, дата рождения 2018-08-01 </h2>
                                 <div class="top_metainfo">
                                     <div class="category">
-                                        <i class="fa fa-paw" aria-hidden="true"></i>
-                                        <span>Категория:</span>
+                                        <i class="fa fa-hashtag" aria-hidden="true"></i>
+<!--                                        <span>Категория:</span>-->
                                         <a href="#">Продажа щенков</a>
                                     </div><!-- end /.category-->
                                     <div class="autor">
                                         <i class="fa fa-user" aria-hidden="true"></i>
-                                        <span>Разместил:</span>
+<!--                                        <span>Разместил:</span>-->
                                         <a href="#">Nikita Kozlov</a>
                                     </div><!-- end /.autor-->
                                 </div><!-- end /.top_metainfo-->
@@ -854,12 +854,12 @@
                                 <div class="top_metainfo">
                                     <div class="category">
                                         <i class="fa fa-paw" aria-hidden="true"></i>
-                                        <span>Категория:</span>
+<!--                                        <span>Категория:</span>-->
                                         <a href="#">Продажа щенков</a>
                                     </div><!-- end /.category-->
                                     <div class="autor">
                                         <i class="fa fa-user" aria-hidden="true"></i>
-                                        <span>Разместил:</span>
+<!--                                        <span>Разместил:</span>-->
                                         <a href="#">Nikita Kozlov</a>
                                     </div><!-- end /.autor-->
                                 </div><!-- end /.top_metainfo-->
@@ -973,12 +973,12 @@
                                 <div class="top_metainfo">
                                     <div class="category">
                                         <i class="fa fa-paw" aria-hidden="true"></i>
-                                        <span>Категория:</span>
+<!--                                        <span>Категория:</span>-->
                                         <a href="#">Продажа щенков</a>
                                     </div><!-- end /.category-->
                                     <div class="autor">
                                         <i class="fa fa-user" aria-hidden="true"></i>
-                                        <span>Разместил:</span>
+<!--                                        <span>Разместил:</span>-->
                                         <a href="#">Nikita Kozlov</a>
                                     </div><!-- end /.autor-->
                                 </div><!-- end /.top_metainfo-->
