--- a/src/index.html
+++ b/src/index.html
@@ -463,7 +463,7 @@
                                             <div class="sex"><i class="fa fa-mars" aria-hidden="true"></i>
                                                 <span>Мальчик</span></div>
                                             <div class="birthday">
-                                                <i class="fa fa-calendar" aria-hidden="true"></i>
+                                                <i class="fa fa-birthday-cake" aria-hidden="true"></i>
                                                 <span>19 ноября 2018</span>
                                             </div>
                                             <div class="adress">
@@ -513,7 +513,7 @@
                                             <div class="sex"><i class="fa fa-venus" aria-hidden="true"></i>
                                                 <span>Девочка</span></div>
                                             <div class="birthday">
-                                                <i class="fa fa-calendar" aria-hidden="true"></i>
+                                                <i class="fa fa-birthday-cake" aria-hidden="true"></i>
                                                 <span>19 ноября 2018</span>
                                             </div>
                                             <div class="adress">
@@ -561,7 +561,7 @@
                                             <div class="sex"><i class="fa fa-mars" aria-hidden="true"></i>
                                                 <span>Мальчик</span></div>
                                             <div class="birthday">
-                                                <i class="fa fa-calendar" aria-hidden="true"></i>
+                                                <i class="fa fa-birthday-cake" aria-hidden="true"></i>
                                                 <span>19 ноября 2018</span>
                                             </div>
                                             <div class="adress">
@@ -609,7 +609,7 @@
                                             <div class="sex"><i class="fa fa-mars" aria-hidden="true"></i>
                                                 <span>Мальчик</span></div>
                                             <div class="birthday">
-                                                <i class="fa fa-calendar" aria-hidden="true"></i>
+                                                <i class="fa fa-birthday-cake" aria-hidden="true"></i>
                                                 <span>19 ноября 2018</span>
                                             </div>
                                             <div class="adress">
