Добавлена ссылка в заголовок статьи в списке статей.

--- a/src/articles.html
+++ b/src/articles.html
@@ -611,7 +611,8 @@
                     <div class="col-md-8">
                         <div class="list_articles">
                             <div class="article">
-                                <h2>Продаётся щенок породы Сибирский хаски, мальчик, дата рождения 2018-08-01 </h2>
+                                <h2><a href="">Продаётся щенок породы Сибирский хаски, мальчик, дата рождения 2018-08-01 </a>
+                                    </h2>
                                 <div class="top_metainfo">
                                     <div class="category">
                                         <i class="fa fa-hashtag" aria-hidden="true"></i>
@@ -663,27 +664,27 @@
                                         <span>Метки:</span>
                                         <ul>
                                             <li>
-                                                <i class="fa fa-thumb-tack" aria-hidden="true"></i>
+                                                <i class="fa fa-tag" aria-hidden="true"></i>
                                                 <a href="#">Чемпиор России</a>
                                             </li>
                                             <li>
-                                                <i class="fa fa-thumb-tack" aria-hidden="true"></i>
+                                                <i class="fa fa-tag" aria-hidden="true"></i>
                                                 <a href="#">Юный чемпион Беларуси</a>
                                             </li>
                                             <li>
-                                                <i class="fa fa-thumb-tack" aria-hidden="true"></i>
+                                                <i class="fa fa-tag" aria-hidden="true"></i>
                                                 <a href="#">Чистокровный</a>
                                             </li>
                                             <li>
-                                                <i class="fa fa-thumb-tack" aria-hidden="true"></i>
+                                                <i class="fa fa-tag" aria-hidden="true"></i>
                                                 <a href="#">Арион Лотас</a>
                                             </li>
                                             <li>
-                                                <i class="fa fa-thumb-tack" aria-hidden="true"></i>
+                                                <i class="fa fa-tag" aria-hidden="true"></i>
                                                 <a href="#">Европейский питомник</a>
                                             </li>
                                             <li>
-                                                <i class="fa fa-thumb-tack" aria-hidden="true"></i>
+                                                <i class="fa fa-tag" aria-hidden="true"></i>
                                                 <a href="#">Европейский питомник</a>
                                             </li>
                                         </ul>
@@ -731,7 +732,8 @@
                                 </div><!-- end /.bott_metainfo -->
                             </div><!-- end /.article -->
                             <div class="article">
-                                <h2>Продаётся щенок породы Сибирский хаски, мальчик, дата рождения 2018-08-01 </h2>
+                                <h2>
+                                    <a href="">Продаётся щенок породы Сибирский хаски, мальчик, дата рождения 2018-08-01 </a></h2>
                                 <div class="top_metainfo">
                                     <div class="category">
                                         <i class="fa fa-hashtag" aria-hidden="true"></i>
@@ -782,27 +784,27 @@
                                         <span>Метки:</span>
                                         <ul>
                                             <li>
-                                                <i class="fa fa-thumb-tack" aria-hidden="true"></i>
+                                                <i class="fa fa-tag" aria-hidden="true"></i>
                                                 <a href="#">Чемпиор России</a>
                                             </li>
                                             <li>
-                                                <i class="fa fa-thumb-tack" aria-hidden="true"></i>
+                                                <i class="fa fa-tag" aria-hidden="true"></i>
                                                 <a href="#">Юный чемпион Беларуси</a>
                                             </li>
                                             <li>
-                                                <i class="fa fa-thumb-tack" aria-hidden="true"></i>
+                                                <i class="fa fa-tag" aria-hidden="true"></i>
                                                 <a href="#">Чистокровный</a>
                                             </li>
                                             <li>
-                                                <i class="fa fa-thumb-tack" aria-hidden="true"></i>
+                                                <i class="fa fa-tag" aria-hidden="true"></i>
                                                 <a href="#">Арион Лотас</a>
                                             </li>
                                             <li>
-                                                <i class="fa fa-thumb-tack" aria-hidden="true"></i>
+                                                <i class="fa fa-tag" aria-hidden="true"></i>
                                                 <a href="#">Европейский питомник</a>
                                             </li>
                                             <li>
-                                                <i class="fa fa-thumb-tack" aria-hidden="true"></i>
+                                                <i class="fa fa-tag" aria-hidden="true"></i>
                                                 <a href="#">Европейский питомник</a>
                                             </li>
                                         </ul>
@@ -850,7 +852,11 @@
                                 </div><!-- end /.bott_metainfo -->
                             </div><!-- end /.article -->
                             <div class="article">
-                                <h2>Продаётся щенок породы Сибирский хаски, мальчик, дата рождения 2018-08-01 </h2>
+                                <h2>
+                                    <a href="">
+                                        Продаётся щенок породы Сибирский хаски, мальчик, дата рождения 2018-08-01
+                                    </a>
+                                    </h2>
                                 <div class="top_metainfo">
                                     <div class="category">
                                         <i class="fa fa-paw" aria-hidden="true"></i>
@@ -901,27 +907,27 @@
                                         <span>Метки:</span>
                                         <ul>
                                             <li>
-                                                <i class="fa fa-thumb-tack" aria-hidden="true"></i>
+                                                <i class="fa fa-tag" aria-hidden="true"></i>
                                                 <a href="#">Чемпиор России</a>
                                             </li>
                                             <li>
-                                                <i class="fa fa-thumb-tack" aria-hidden="true"></i>
+                                                <i class="fa fa-tag" aria-hidden="true"></i>
                                                 <a href="#">Юный чемпион Беларуси</a>
                                             </li>
                                             <li>
-                                                <i class="fa fa-thumb-tack" aria-hidden="true"></i>
+                                                <i class="fa fa-tag" aria-hidden="true"></i>
                                                 <a href="#">Чистокровный</a>
                                             </li>
                                             <li>
-                                                <i class="fa fa-thumb-tack" aria-hidden="true"></i>
+                                                <i class="fa fa-tag" aria-hidden="true"></i>
                                                 <a href="#">Арион Лотас</a>
                                             </li>
                                             <li>
-                                                <i class="fa fa-thumb-tack" aria-hidden="true"></i>
+                                                <i class="fa fa-tag" aria-hidden="true"></i>
                                                 <a href="#">Европейский питомник</a>
                                             </li>
                                             <li>
-                                                <i class="fa fa-thumb-tack" aria-hidden="true"></i>
+                                                <i class="fa fa-tag" aria-hidden="true"></i>
                                                 <a href="#">Европейский питомник</a>
                                             </li>
                                         </ul>
@@ -969,7 +975,10 @@
                                 </div><!-- end /.bott_metainfo -->
                             </div><!-- end /.article -->
                             <div class="article">
-                                <h2>Продаётся щенок породы Сибирский хаски, мальчик, дата рождения 2018-08-01 </h2>
+                                <h2>
+                                    <a href="">Продаётся щенок породы Сибирский хаски, мальчик, дата рождения
+                                        2018-08-01</a>
+                                </h2>
                                 <div class="top_metainfo">
                                     <div class="category">
                                         <i class="fa fa-paw" aria-hidden="true"></i>
@@ -1020,27 +1029,27 @@
                                         <span>Метки:</span>
                                         <ul>
                                             <li>
-                                                <i class="fa fa-thumb-tack" aria-hidden="true"></i>
+                                                <i class="fa fa-tag" aria-hidden="true"></i>
                                                 <a href="#">Чемпиор России</a>
                                             </li>
                                             <li>
-                                                <i class="fa fa-thumb-tack" aria-hidden="true"></i>
+                                                <i class="fa fa-tag" aria-hidden="true"></i>
                                                 <a href="#">Юный чемпион Беларуси</a>
                                             </li>
                                             <li>
-                                                <i class="fa fa-thumb-tack" aria-hidden="true"></i>
+                                                <i class="fa fa-tag" aria-hidden="true"></i>
                                                 <a href="#">Чистокровный</a>
                                             </li>
                                             <li>
-                                                <i class="fa fa-thumb-tack" aria-hidden="true"></i>
+                                                <i class="fa fa-tag" aria-hidden="true"></i>
                                                 <a href="#">Арион Лотас</a>
                                             </li>
                                             <li>
-                                                <i class="fa fa-thumb-tack" aria-hidden="true"></i>
+                                                <i class="fa fa-tag" aria-hidden="true"></i>
                                                 <a href="#">Европейский питомник</a>
                                             </li>
                                             <li>
-                                                <i class="fa fa-thumb-tack" aria-hidden="true"></i>
+                                                <i class="fa fa-tag" aria-hidden="true"></i>
                                                 <a href="#">Европейский питомник</a>
                                             </li>
                                         </ul>
