--- a/src/index.html
+++ b/src/index.html
@@ -653,7 +653,7 @@
                                         <option>Австралийская овчарка</option>
                                         <option>Сибирский хаски</option>
                                     </select>
-                                    <i class="fa fa-angle-down fa-lg" aria-hidden="true"></i>
+<!--                                    <i class="fa fa-angle-down fa-lg" aria-hidden="true"></i>-->
                                 </div>
                             </div>
                             <div class="form-group col-xl-2 col-md-4 col-sm-6">
@@ -663,7 +663,7 @@
                                         <option>Мужской</option>
                                         <option>Женский</option>
                                     </select>
-                                    <i class="fa fa-angle-down fa-lg" aria-hidden="true"></i>
+<!--                                    <i class="fa fa-angle-down fa-lg" aria-hidden="true"></i>-->
                                 </div>
                             </div>
                             <div class="form-group col-xl-2 col-md-4 col-sm-6">
@@ -672,7 +672,7 @@
                                         <option selected>Дата рождения</option>
                                         <option>Календарь</option>
                                     </select>
-                                    <i class="fa fa-angle-down fa-lg" aria-hidden="true"></i>
+<!--                                    <i class="fa fa-angle-down fa-lg" aria-hidden="true"></i>-->
                                 </div>
                             </div>
                             <div class="form-group col-xl-2 col-md-4 col-sm-6">
@@ -681,7 +681,7 @@
                                         <option selected>Местоположение</option>
                                         <option>Карта</option>
                                     </select>
-                                    <i class="fa fa-angle-down fa-lg" aria-hidden="true"></i>
+<!--                                    <i class="fa fa-angle-down fa-lg" aria-hidden="true"></i>-->
                                 </div>
                             </div>
                             <div class="form-group col-xl-2 col-md-4 col-sm-6">
@@ -690,7 +690,7 @@
                                         <option selected>Цена</option>
                                         <option>500 руб.</option>
                                     </select>
-                                    <i class="fa fa-angle-down fa-lg" aria-hidden="true"></i>
+<!--                                    <i class="fa fa-angle-down fa-lg" aria-hidden="true"></i>-->
                                 </div>
 
                             </div>
@@ -942,7 +942,7 @@
                                         <option selected>Место пропажи</option>
                                         <option>Карта</option>
                                     </select>
-                                    <i class="fa fa-angle-down fa-lg" aria-hidden="true"></i>
+<!--                                    <i class="fa fa-angle-down fa-lg" aria-hidden="true"></i>-->
                                 </div>
                             </div>
                             <div class="form-group col-xl-2 col-lg-6 col-md-6 col-sm-6">
@@ -951,7 +951,7 @@
                                         <option selected>Дата пропажи</option>
                                         <option>Календарь</option>
                                     </select>
-                                    <i class="fa fa-angle-down fa-lg" aria-hidden="true"></i>
+<!--                                    <i class="fa fa-angle-down fa-lg" aria-hidden="true"></i>-->
                                 </div>
                             </div>
                             <div class="form-group col-xl-2 col-lg-6 col-md-6 col-sm-6">
@@ -961,7 +961,7 @@
                                         <option>Австралийская овчарка</option>
                                         <option>Сибирский хаски</option>
                                     </select>
-                                    <i class="fa fa-angle-down fa-lg" aria-hidden="true"></i>
+<!--                                    <i class="fa fa-angle-down fa-lg" aria-hidden="true"></i>-->
                                 </div>
                             </div>
                             <div class="form-group col-xl-2 col-lg-6 col-md-6 col-sm-6">
@@ -971,7 +971,7 @@
                                         <option>Мужской</option>
                                         <option>Женский</option>
                                     </select>
-                                    <i class="fa fa-angle-down fa-lg" aria-hidden="true"></i>
+<!--                                    <i class="fa fa-angle-down fa-lg" aria-hidden="true"></i>-->
                                 </div>
                             </div>
                             <div class="form-group col-xl-2 col-lg-6 col-md-6 col-sm-6">
@@ -1209,7 +1209,7 @@
                                         <option selected>Место положение</option>
                                         <option>Карта</option>
                                     </select>
-                                    <i class="fa fa-angle-down fa-lg" aria-hidden="true"></i>
+<!--                                    <i class="fa fa-angle-down fa-lg" aria-hidden="true"></i>-->
                                 </div>
                             </div>
                             <div class="form-group col-xl-2 col-lg-6 col-md-6 col-sm-6">
@@ -1219,7 +1219,7 @@
                                         <option>Австралийская овчарка</option>
                                         <option>Сибирский хаски</option>
                                     </select>
-                                    <i class="fa fa-angle-down fa-lg" aria-hidden="true"></i>
+<!--                                    <i class="fa fa-angle-down fa-lg" aria-hidden="true"></i>-->
                                 </div>
                             </div>
                             <div class="form-group col-xl-2 col-lg-6 col-md-6 col-sm-6">
@@ -1229,7 +1229,7 @@
                                         <option>Мужской</option>
                                         <option>Женский</option>
                                     </select>
-                                    <i class="fa fa-angle-down fa-lg" aria-hidden="true"></i>
+<!--                                    <i class="fa fa-angle-down fa-lg" aria-hidden="true"></i>-->
                                 </div>
                             </div>
                             <div class="form-group col-xl-2 col-lg-6 col-md-6 col-sm-6">
@@ -1494,7 +1494,7 @@
                                         <option selected>Период проведения</option>
                                         <option>Календарь</option>
                                     </select>
-                                    <i class="fa fa-angle-down fa-lg" aria-hidden="true"></i>
+<!--                                    <i class="fa fa-angle-down fa-lg" aria-hidden="true"></i>-->
                                 </div>
                             </div>
                             <div class="form-group col-xl-2 col-md-4 col-sm-6">
@@ -1503,7 +1503,7 @@
                                         <option selected>Место проведения</option>
                                         <option>Карта</option>
                                     </select>
-                                    <i class="fa fa-angle-down fa-lg" aria-hidden="true"></i>
+<!--                                    <i class="fa fa-angle-down fa-lg" aria-hidden="true"></i>-->
                                 </div>
                             </div>
                             <div class="form-group col-xl-2 col-md-4 col-sm-6">
