--- a/src/index.html
+++ b/src/index.html
@@ -112,7 +112,7 @@
                                 <li><a href="">Пункт 5</a></li>
                             </ul>
                         </li>
-                        <li class="item-004">
+                        <li class="item-004 active">
                             <a href="">
                                 <span>Объявления</span>
                                 <i class="fa fa-angle-down" aria-hidden="true"></i>
