Убран класс inputbox

--- a/src/index.html
+++ b/src/index.html
@@ -190,7 +190,7 @@
                                     </div>
                                 </div>
                                 <div id="form-login-remember" class="control-group checkbox">
-                                    <input id="modlgn-remember" type="checkbox" name="remember" class="inputbox"
+                                    <input id="modlgn-remember" type="checkbox" name="remember"
                                            value="yes">
                                     <label for="modlgn-remember" class="control-label">Запомнить меня</label>
 
@@ -239,7 +239,7 @@
                             </div>
                             <div class="field_search">
                                 <input name="searchword" id="mod-search-searchword138" maxlength="200"
-                                       class="inputbox search-query input-medium" type="search" placeholder="Что ищем?">
+                                       class="search-query input-medium" type="search" placeholder="Что ищем?">
                                 <button onclick="this.form.searchword.focus();">Найти</button>
                                 <input type="hidden" name="task" value="search">
                                 <input type="hidden" name="option" value="com_search">
