Добавлены правки в отображение банера в шапке сайта

--- a/src/index.html
+++ b/src/index.html
@@ -277,10 +277,12 @@
                 <div class="col-lg-6 col-md-12">
                     <div class="baner_wraper">
                         <div class="banner_468x60">
-                            Банер 468x60
+                            <img src="images/banners/banner-468x60.png" alt="">
+<!--                            Банер 468x60-->
                         </div>
                         <div class="banner_300x250">
-                            Банер 300x250
+                            <img src="images/banners/banner-468x60.png" alt="">
+<!--                            Банер 300x250-->
                         </div>
                     </div>
                 </div>
