В модуле новостей реализовано увеличение изображения при наведении

--- a/src/index.html
+++ b/src/index.html
@@ -298,9 +298,11 @@
                 <div class="row">
                     <div class="col-sm-12 col-lg-6">
                         <div class="wrapper_main_new">
-                            <a href="">
-                                <img src="images/content/mod_news/main_new.jpg" alt="">
-                            </a>
+                            <div class="image_wrap">
+                                <a href="">
+                                    <img src="images/content/mod_news/main_new.jpg" alt="">
+                                </a>
+                            </div>
                             <div class="title_wrap">
                                 <div class="data">
                                     <div class="day">27</div>
@@ -334,9 +336,11 @@
                             <div class="wrap_block_news">
                                 <div class="col-sm-6 col-lg-6">
                                     <div class="wrap_new">
-                                        <a href="">
-                                            <img src="images/content/mod_news/new_2.jpg" alt="">
-                                        </a>
+                                        <div class="wrap_new_img">
+                                            <a href="">
+                                                <img src="images/content/mod_news/new_2.jpg" alt="">
+                                            </a>
+                                        </div>
                                         <div class="data">24 мая 2018</div>
                                         <div class="title_new">
                                             <h3>
@@ -350,9 +354,11 @@
                                 </div>
                                 <div class="col-sm-6 col-lg-6">
                                     <div class="wrap_new">
-                                        <a href="">
-                                            <img src="images/content/mod_news/new_3.jpg" alt="">
-                                        </a>
+                                        <div class="wrap_new_img">
+                                            <a href="">
+                                                <img src="images/content/mod_news/new_2.jpg" alt="">
+                                            </a>
+                                        </div>
                                         <div class="data">26 мая 2018</div>
                                         <div class="title_new">
                                             <h3>
