--- a/src/index.html
+++ b/src/index.html
@@ -266,7 +266,11 @@
                         </div>
                         <div class="col-sm-6 col-md-6 col-lg-7 ">
                             <div class="logo_title animated rubberBand">
-                                <span>ProDogs.Info</span>
+                                <span>
+                                    <a href="/">
+                                        ProDogs.Info
+                                    </a>
+                                    </span>
                             </div>
                             <div class="logo_slogan animated rubberBand delay-1s">
                                 Всё о мире собак
