Добавлено изображение в обратную карточку модуля щенки

--- a/src/index.html
+++ b/src/index.html
@@ -485,6 +485,7 @@
                                         </div>
                                     </div><!-- end/.front_card-->
                                     <div class="back_card">
+                                        <img src="images/content/mod_puppies/img_card005.jpg" alt="">
                                         <div class="text">
                                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium
                                                 asperiores beatae blanditiis corporis culpa in ipsam ipsum labore
@@ -535,6 +536,7 @@
                                         </div>
                                     </div><!-- end/.front_card-->
                                     <div class="back_card">
+                                        <img src="images/content/mod_puppies/img_card006.jpg" alt="">
                                         <div class="text">
                                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium
                                                 asperiores beatae blanditiis corporis culpa in ipsam ipsum labore
@@ -583,6 +585,7 @@
                                         </div>
                                     </div><!-- end/.front_card-->
                                     <div class="back_card">
+                                        <img src="images/content/mod_puppies/img_card003.jpg" alt="">
                                         <div class="text">
                                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium
                                                 asperiores beatae blanditiis corporis culpa in ipsam ipsum labore
@@ -631,6 +634,7 @@
                                         </div>
                                     </div><!-- end/.front_card-->
                                     <div class="back_card">
+                                        <img src="images/content/mod_puppies/img_card004.jpg" alt="">
                                         <div class="text">
                                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium
                                                 asperiores beatae blanditiis corporis culpa in ipsam ipsum labore
