Настроено отображение главной новости на широком экране

--- a/src/index.html
+++ b/src/index.html
@@ -303,35 +303,42 @@
                     <div class="col-sm-12 col-lg-6">
                         <div class="wrapper_main_new">
                             <div class="image_wrap">
-                                <a href="">
-                                    <img src="images/content/mod_news/main_new.jpg" alt="">
-                                </a>
+                                <img src="images/content/mod_news/main_new.jpg" alt="">
                             </div>
-                            <div class="title_wrap">
-                                <div class="data">
-                                    <div class="day">27</div>
-                                    <div class="month">Июля</div>
-                                    <div class="year">2018</div>
+                            <div class="text_wrap">
+                                <div class="title_wrap">
+                                    <div class="data">
+                                        <div class="day">27</div>
+                                        <div class="month">Июля</div>
+                                        <div class="year">2018</div>
+                                    </div>
+                                    <div class="title_new">
+                                        <a href="">
+                                            <h3>
+                                                Как правильно воспитать вашего питомца? Как правильно воспитать вашего
+                                                питомца?
+                                            </h3>
+                                        </a>
+                                    </div>
                                 </div>
-                                <div class="title_new">
-                                    <a href="">
-                                        <h3>
-                                            Как правильно воспитать вашего питомца? Как правильно воспитать вашего
-                                            питомца?
-                                        </h3>
-                                    </a>
+                                <div class="intro_new">
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium consequatur
+                                        deleniti dignissimos, eaque fugit magni modi nesciunt nobis placeat praesentium.
+                                        Deserunt doloribus eligendi est laboriosam maxime mollitia odit sequi
+                                        voluptatum.
+                                    </p>
+                                    <p>Deserunt dignissimos eos illo ipsa itaque laborum obcaecati quam repellendus
+                                        veritatis voluptas! Accusantium doloribus et hic incidunt ipsa laboriosam natus
+                                        recusandae repellendus sint? Beatae consequatur cupiditate modi porro quasi
+                                        voluptatum.
+                                    </p>
+                                    <p>
+                                        <a href="#" class="link_more">
+                                            <span>Подробнее</span>
+                                            <i class="fa fa-angle-right" aria-hidden="true"></i>
+                                        </a>
+                                    </p>
                                 </div>
-                            </div>
-                            <div class="intro_new">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium consequatur
-                                    deleniti dignissimos, eaque fugit magni modi nesciunt nobis placeat praesentium.
-                                    Deserunt doloribus eligendi est laboriosam maxime mollitia odit sequi voluptatum.
-                                </p>
-                                <p>Deserunt dignissimos eos illo ipsa itaque laborum obcaecati quam repellendus
-                                    veritatis voluptas! Accusantium doloribus et hic incidunt ipsa laboriosam natus
-                                    recusandae repellendus sint? Beatae consequatur cupiditate modi porro quasi
-                                    voluptatum.
-                                </p>
                             </div>
                         </div>
                     </div>
